--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@ input[type='submit'], button, [aria-label]{
     cursor: pointer;
   }
   body{
-      text-align: center;
+      text-align: center !important;
   }
   table{
-      margin-left: 750px;
+     
       margin-top: 50px;
   }
   @media only screen and (max-width: 600px) {
     table {
-     margin-left: 100px;
+        margin-top: 50px;
     }
   }
