--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ input[type='submit'], button, [aria-label]{
       font-weight: bold;
   }
   table, th, td {
-    border:1px solid black;
+    border:1px solid black !important;
+
    
   }
   #name {
@@ -19,21 +20,75 @@ input[type='submit'], button, [aria-label]{
   }
   body{
       text-align: center !important;
+      background-image: url("https://img.freepik.com/free-vector/botanical-cannabis-leaf-background_23-2148778834.jpg?size=626&ext=jpg&ga=GA1.2.1482984194.1639872000");
+      background-position: center; /* Center the image */
+      background-repeat: no-repeat; /* Do not repeat the image */
+      background-size: cover; /* Resize the background image to cover the entire container */
   }
   table{
-     
+     background-color: white;
       margin-top: 50px;
+     
   }
-
+#counter{
+   color: white;
+   background-color: red;
+    
+}
  .editing{
      background-color: yellow;
      border-radius: 25px;
  } 
+
  .deleting{
      background-color: red;
      color: white;
      border-radius: 25px;
  }
+
+ footer{
+     background-color: green;
+     color: white;
+ }
+
+ /* modal1 */
+ /* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
   @media only screen and (max-width: 600px) {
     table {
         margin-top: 50px;
