--- a/style.css
+++ b/style.css
@@ -2,7 +2,16 @@ input[type='submit'], button, [aria-label]{
     cursor: pointer;
   }
   #editForm{
-    display: none;
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
   #counter {
       font-weight: bold;
